--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <footer id="trash" class="mt-auto">
         <div class="w-100 bg-danger p-3 text-center text-light display-4 mt-auto">
           <span class="oi oi-trash mx-auto mb-4"></span>
-          Drop Here to Remove
+          🗑 Drop Here to Remove
         </div>
       </footer>
       <!-- TRASH ZONE END -->
@@ -121,6 +121,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery-ui-touch-punch@0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
