--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <h1 class="text-center">
         <span class="oi oi-task d-inline d-lg-none"></span>
         Taskmaster Pro Edition</h1>
-      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">
+      <button id="create-task" class="btn btn-block btn-add" data-toggle="modal" data-target="#task-form-modal">
         <span class="oi oi-plus mr-2"></span>Add
         Task</button>
-      <button id="remove-tasks" class="btn btn-block btn-danger">
+      <button id="remove-tasks" class="btn btn-block btn-delete">
         <span class="oi oi-trash mr-2"></span>
         Delete All Tasks</button>
       <span class="oi oi-task display-1 text-center mb-2 d-none d-lg-block mt-auto"></span>
@@ -89,14 +89,12 @@
         <!-- DONE END -->
       </div>
       <!-- TRASH ZONE START -->
-      <footer id="trash" class="mt-auto">
-        <div class="mt-auto overflow-hidden" id="trash">  
-          <div class="w-100 p-3 text-center bottom-trash">
-            <span class="oi oi-trash mx-auto mb-4"></span>
-            Drop Here to Remove
-          </div>
+      <div class="mt-auto overflow-hidden" id="trash">  
+        <div class="w-100 p-3 text-center bottom-trash">
+          <span class="oi oi-trash mx-auto mb-4"></span>
+          Drop Here to Remove
         </div>
-      </footer>
+      </div>
       <!-- TRASH ZONE END -->
     </main>
   </div>
@@ -125,8 +123,8 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save Task</button>
+          <button type="button" class="btn btn-close" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-save">Save Task</button>
         </div>
       </div>
     </div>
